changed menu bg color to be more readable, added blog post, corrected date metadata in a few blog posts

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -274,7 +274,7 @@ Small Device Styles
 /* topnav responsive mobile menu styles */
 .topnav {
   overflow: hidden;
-  background-color: #333;
+  background-color: #888;
 }
 
 .topnav a {
